--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                         <div class="card-content">
                             <h2>SOLICITUD PARA JUNTAS</h2>
                             <p>Específicamente para eventos, reuniones y presentaciones</p>
-                        </div>
+                            <button class="btn-solicitar" onclick="abrirSolicitud('juntas')">Solicitar</button>
+                        </div>  
                     </div>
 
                 </div>
