--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </div>
                         <div class="card-content">
                             <h2>SOLICITUD MENSUAL/ORDINARIA</h2>
-                            <p>Para necesidades regulares del mes</p>
+                            <p>Para necesidades regulares del mes, solo se puede realizar una</p>
                             <button class="btn-solicitar" onclick="abrirSolicitud('ordinaria')">Solicitar</button>
                         </div>
                     </div>
