--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Administración - Sistema de Insumos</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="css/supadmin.css">
     <script>
         (function () {
             const session = sessionStorage.getItem('currentUser');
