--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Header se carga dinámicamente -->
-    <div id="header-container"></div>
+    <div id="headerAdmin-container"></div>
 
     <main class="main-content admin-content">
 
@@ -268,6 +268,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/script.js"></script>
     <script src="js/admin.js"></script>
+    <script src="js/inventario.js"></script>
 </body>
 
 </html>
