--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Header se carga dinámicamente -->
-    <div id="headerAdmin-container"></div>
+    <div id="header-container"></div>
 
     <main class="main-content admin-content">
 
