--- a/inventario.html
+++ b/inventario.html
@@ -399,7 +399,7 @@
                                 <option value="caja">Caja</option>
                                 <option value="paquete">Paquete</option>
                                 <option value="resma">Resma</option>
-                                <option value="litro">Litro</option>
+                                <option value="L">Litro</option>
                                 <option value="metro">Metro</option>
                                 <option value="rollo">Rollo</option>
                                 <option value="juego">Juego</option>
