--- a/inventario.html
+++ b/inventario.html
@@ -7,6 +7,7 @@
     <title>Gestión de Inventario - Sistema de Insumos</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/supadmin.css">
+    <link rel="stylesheet" href="css/inventario.css">
     <meta name="description" content="Sistema de gestión de inventario de insumos">
     <script>
         (function () {
