--- a/admin.html
+++ b/admin.html
@@ -77,7 +77,7 @@
                     <!-- Filtros de solicitudes -->
                     <div class="filtros-admin">
                         <select id="filtroEstadoAdmin" onchange="filtrarSolicitudesAdmin()">
-                            <option value="">🔍 Todos los estados</option>
+                            <option value="">Todos los estados</option>
                             <option value="pendiente">⏳ Pendientes</option>
                             <option value="en_revision">👀 En Revisión</option>
                             <option value="cerrado">✅ Cerradas</option>
@@ -85,7 +85,7 @@
                         </select>
 
                         <select id="filtroTipoAdmin" onchange="filtrarSolicitudesAdmin()">
-                            <option value="">📋 Todos los tipos</option>
+                            <option value="">Todos los tipos</option>
                             <option value="ordinaria">📅 Ordinarias</option>
                             <option value="juntas">👥 Para Juntas</option>
                         </select>
