--- a/admin.html
+++ b/admin.html
@@ -264,6 +264,7 @@
                 <div class="periodo-selector">
                     <select id="selectorMes"></select>
                     <select id="selectorAno"></select>
+                    <select id="selectorArea"></select> <!-- NUEVO -->
                     <button class="btn-admin-primary" onclick="generarReporteMes()">
                         Generar Reporte
                     </button>
