--- a/admin.html
+++ b/admin.html
@@ -141,7 +141,7 @@
                     <div class="tool-card">
                         <h3>🔧 Herramientas Rápidas</h3>
                         <div class="tool-actions">
-                            <button class="btn-admin-secondary" onclick="generarReporte()"
+                            <button class="btn-admin-secondary" onclick="generarReporteMes()"
                                 title="Generar reporte del día">
                                 📈 Reporte Mensual
                             </button>
