--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,7 @@
     <title>Panel de Administración - Sistema de Insumos</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/supadmin.css">
+    <link rel="stylesheet" href="css/reportes.css">
     <meta name="description" content="Panel administrativo para gestión de solicitudes de insumos">
 </head>
 
@@ -141,7 +142,7 @@
                     <div class="tool-card">
                         <h3>🔧 Herramientas Rápidas</h3>
                         <div class="tool-actions">
-                            <button class="btn-admin-secondary" onclick="generarReporteMes()"
+                            <button class="btn-admin-secondary" onclick="abrirReportes()"
                                 title="Generar reporte del día">
                                 📈 Reporte Mensual
                             </button>
@@ -264,8 +265,8 @@
                 <div class="periodo-selector">
                     <select id="selectorMes"></select>
                     <select id="selectorAno"></select>
-                    <select id="selectorArea"></select> <!-- NUEVO -->
-                    <button class="btn-admin-primary" onclick="generarReporteMes()">
+                    <select id="selectorArea"></select>
+                    <button class="btn-reporte-generar" onclick="ejecutarReporte()">
                         Generar Reporte
                     </button>
                 </div>
@@ -277,7 +278,7 @@
                 </div>
 
                 <!-- Contenido del reporte -->
-                <div id="reporteContent" style="display: none;">
+                <div id="reporteContenido" style="display: none;">
                     <!-- Se genera dinámicamente -->
                 </div>
             </div>
@@ -299,6 +300,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/script.js"></script>
     <script src="js/admin.js"></script>
+    <script src="js/reporte.js"></script>
 </body>
 
 </html>
