--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
     <title>Panel de Administración - Sistema de Insumos</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/supadmin.css">
-    <link rel="stylesheet" href="css/reportes.css">
+    <link rel="stylesheet" href="css/reporte.css">
     <meta name="description" content="Panel administrativo para gestión de solicitudes de insumos">
 </head>
 
