--- a/admin.html
+++ b/admin.html
@@ -97,9 +97,9 @@
                         <button class="btn-admin-primary" onclick="recargarSolicitudes()" id="btnRecargarAdmin">
                             🔄 Actualizar Lista
                         </button>
-                        <button class="btn-admin-secondary" onclick="exportarDatos()" title="Próximamente">
+                        <!--<button class="btn-admin-secondary" onclick="exportarDatos()" title="Próximamente">
                             📊 Exportar Datos
-                        </button>
+                        </button>-->
                     </div>
 
                 </div>
