--- a/admin.html
+++ b/admin.html
@@ -305,6 +305,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/header-loader.js"></script>
     <script src="js/script.js"></script>
     <script src="js/admin.js"></script>
     <script src="js/reporte.js"></script>
