--- a/admin.html
+++ b/admin.html
@@ -319,7 +319,7 @@
             // 2. Cargar footer si existe
             const footerContainer = document.getElementById('footer-container');
             if (footerContainer) {
-                loadComponent('footer-container', 'includes/footer.html')
+                loadComponent('footer-container', 'includes/foot.html')
                     .catch(() => console.log('Footer no disponible'));
             }
 
