--- a/admin.html
+++ b/admin.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/supadmin.css">
     <link rel="stylesheet" href="css/reporte.css">
+    <link rel="stylesheet" href="css/header.css">
     <meta name="description" content="Panel administrativo para gestión de solicitudes de insumos">
 </head>
 
