--- a/admin.html
+++ b/admin.html
@@ -315,6 +315,11 @@
             .then(html => {
                 document.getElementById('header-contain').innerHTML = html;
             });
+        fetch('includes/foot.html')
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById('footer-container').innerHTML = html;
+            });
     </script>
 </body>
 
