--- a/admin.html
+++ b/admin.html
@@ -315,7 +315,7 @@
             .then(html => {
                 document.getElementById('header-contain').innerHTML = html;
             });
-        fetch('includes/foot.html')
+        fetch('js/script.js')
             .then(response => response.text())
             .then(html => {
                 document.getElementById('footer-container').innerHTML = html;
