--- a/admin.html
+++ b/admin.html
@@ -309,6 +309,18 @@
     <script src="js/script.js"></script>
     <script src="js/admin.js"></script>
     <script src="js/reporte.js"></script>
+    <script>
+        fetch('includes/headerAdmin.html')
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById('header-contain').innerHTML = html;
+            });
+        fetch('includes/foot.html')
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById('footer-container').innerHTML = html;
+            });
+    </script>
 </body>
 
 </html>
