--- a/admin.html
+++ b/admin.html
@@ -318,7 +318,7 @@
         fetch('includes/foot.html')
             .then(response => response.text())
             .then(html => {
-                document.getElementById('footer-container').innerHTML = html;
+                document.getElementById('header-contain').innerHTML = html;
             });
     </script>
 </body>
