--- a/inventario.html
+++ b/inventario.html
@@ -186,7 +186,7 @@
     </main>
 
     <!-- Footer se carga dinámicamente -->
-    <div id="footer-container"></div>
+    <div id="footer-contain"></div>
 
     <!-- Modal de Nuevo Insumo -->
     <div id="nuevoInsumoModal" class="modal-overlay" style="display: none;">
@@ -501,18 +501,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/script.js"></script>
     <script src="js/inventario.js"></script>
-    <script>
-        fetch('includes/headerAdmin.html')
-            .then(response => response.text())
-            .then(html => {
-                document.getElementById('header-contain').innerHTML = html;
-            });
-        fetch('includes/foot.html')
-            .then(response => response.text())
-            .then(html => {
-                document.getElementById('footer-container').innerHTML = html;
-            });
-    </script>
 
 </body>
 
