--- a/admin.html
+++ b/admin.html
@@ -160,7 +160,7 @@
     </main>
 
     <!-- Footer se carga dinámicamente -->
-    <div id="footer-contain"></div>
+    <div id="footer-container"></div>
 
     <!-- Modal de confirmación para acciones críticas -->
     <div id="confirmModal" class="modal-overlay" style="display: none;">
