--- a/inventario.html
+++ b/inventario.html
@@ -186,7 +186,7 @@
     </main>
 
     <!-- Footer se carga dinámicamente -->
-    <div id="footer-contain"></div>
+    <div id="footer-container"></div>
 
     <!-- Modal de Nuevo Insumo -->
     <div id="nuevoInsumoModal" class="modal-overlay" style="display: none;">
