--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Header se carga dinámicamente -->
-    <div id="header-contain"></div>
+    <div id="header-container"></div>
 
     <main class="main-content admin-content">
 
