--- a/admin.html
+++ b/admin.html
@@ -55,7 +55,7 @@
             <div class="container">
                 <h2>🛡️ Gestión Avanzada - Super Administrador</h2>
                 <div class="super-admin-controls">
-                    <button class="btn-super-admin" onclick="gestionarUsuarios()">
+                    <button class="btn-super-admin" onclick="abrirModalUsuarios()">
                         👥 Gestionar Usuarios
                     </button>
                     <!--<button class="btn-super-admin" onclick="reportesAvanzados()">
@@ -309,6 +309,8 @@
     <script src="js/script.js"></script>
     <script src="js/admin.js"></script>
     <script src="js/reporte.js"></script>
+    <script src="js/usuarios.js"></script>
+
 </body>
 
 </html>
