--- a/menu.html
+++ b/menu.html
@@ -51,8 +51,8 @@
                         <div style="text-align: left;">
                             <h3 style="margin: 0; font-size: 1.2rem;">PAPELERÍA</h3>
                             <div style="margin: 0.25rem 0;">
-                                <small id="token-papeleria-ordinario-display" style="opacity: 0.9; display: block;">Ordinario: -</small>
-                                <small id="token-papeleria-extraordinario-display" style="opacity: 0.9; display: block;">Extraordinario: -</small>
+                                <small id="token-papeleria-ordinario-display" style="opacity: 0.9; display: block; font-size: 0.875rem;">Ordinario: -</small>
+                                <small id="token-papeleria-extraordinario-display" style="opacity: 0.9; display: block; font-size: 0.875rem;">Extraordinario: -</small>
                             </div>
                             <p style="margin: 0.25rem 0 0 0; font-size: 0.9rem; opacity: 0.8;">Hojas, folders, útiles</p>
                         </div>
